--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "juice-shop",
-  "version": "15.1.0",
+  "name": "secure-squeeze",
+  "version": "0.1.0",
   "private": true,
   "description": "Probably the most modern and sophisticated insecure web application",
   "keywords": [
